# ZPE-Image

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLIC_AUDIT_LIMITS.md  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  BOUNDED_SCOPE.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  L2_FINAL_REPORT.md  LEGAL_BOUNDARIES.md  README.md  SUPPORT.md
docs/_reorientation/2026-04-17/: NOVELTY_CARD.md
geogram5/: __init__.py  experimental_bundle_codec.py
geogram5/report/: L2_FINAL_REPORT.md
geogram6-bridge-candidate/: L2_BRIDGE_REPORT.md  l2_bridge_candidate.json
proofs/artifacts/: fresh_falsification_packet.json
proofs/manifests/: CURRENT_VERIFICATION_PACKET.md
scripts/: benchmark_support.py  geogram4_l2_image_eval.py  geogram5_l2_image_eval.py  geogram_raster_eval.py
src/zpe_image_codec/: __init__.py  bootstrap.py  bundle_codec.py  codec_constants.py  dispatch.py  enhanced_codec.py  fixtures.py  geometry_codec.py  perturbations.py  verify.py
tests/: common.py  test_image_bundle_experiment.py  test_image_geometry_authority.py  test_readme_contract.py  test_split_bootstrap.py  test_verification.py
validation/results/: fresh_falsification_check.final.json
