[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-image"
version = "0.1.0"
license = "LicenseRef-Zer0pa-SAL-7.0"
description = "Standalone bounded image encoding package for sparse-stroke figures and a narrower hole-bearing route"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Zer0paGlyph"}]
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
zpe-image-verify = "zpe_image_codec.verify:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zpe_image_codec*"]
